# metaconfigurations

./: .gitignore  README.md  _CoqProject  coq-program-verification-template.opam  dune-project  metaconfigurations.opam  ship.sh
.github/workflows/: docker-action.yml
theories/: Dynamics.v  Map.v  Object.v  Process.v  Statics.v  binary_search.v  dune  metaconfig.v
theories/Dynamics/: Procedure.v  Stmt.v  Term.v
theories/Statics/: Value.v
theories/Syntax/: Stmt.v  Term.v  Ty.v  Value.v
