opam-version: "2.0"
maintainer: "you@example.com"
version: "dev"

homepage: "https://github.com/coq-community/coq-program-verification-template"
dev-repo: "git+https://github.com/coq-community/coq-program-verification-template.git"
bug-reports: "https://github.com/coq-community/coq-program-verification-template/issues"
license: "SPDX-identifier-for-your-license"

synopsis: "Coq program verification project template"
description: """
Template project for program verification in Coq.
Uses the Verified Software Toolchain and a classic binary
search program in C as an example."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "3.5"}
  "coq" {>= "8.16"}
  "coq-compcert" {>= "3.13.1"}
  "coq-vst" {>= "2.13" & < "3~"}
]

tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Correctness proofs of algorithms"
  "keyword:program verification"
  "keyword:your keyword"
  "logpath:ProgramVerificationTemplate"
]
authors: [
  "Your Name"
  "Another Optional Name"
]
