(coq.theory
 (name Metaconfigurations)
 (theories stdpp)
 (package metaconfigurations)
 (synopsis "Coq formalization of metaconfigurations"))

(include_subdirs qualified)

; (rule
;  (target binary_search.v)
;  (deps ../src/binary_search.c)
;  (action (run clightgen -o %{target} -normalize %{deps}))
;  (mode fallback))
